speed up zoom/rotation 3x on some hardware

Render to RGBA image instead of RGB. This allows hardware to
accelerate more of it. For ati/radeon on xorg this speeds up
scroll_zoomed_out_5x by factor three; hopefully other hardware
works similar.

Worst benchmark for software-only rendering is 5% slower.

https://gna.org/bugs/?16122
https://bugs.freedesktop.org/show_bug.cgi?id=28670